--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,57 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>eikon parcel starter</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="scss/main.scss" />
-  </head>
-  <body></body>
-</html>
+<div class="container overflow-hidden">
+  <div class="row">
+    <div class="col-12 headline-cards">colonne 1</div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12 col-md-6 col-lg-6">
+      <div class="card-highlights">
+        <h2>En Crimée, la résistance ukrainienne prend tous les risques</h2>
+        <div class="bottom-elements">
+          <p class="noun">De Thomas Wanhoff</p>
+          <img src="" alt="" class="icon" />
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-6">
+      <div class="card-highlights">
+        <h2>En Crimée, la résistance ukrainienne prend tous les risques</h2>
+        <div class="bottom-elements">
+          <p class="noun">De Thomas Wanhoff</p>
+          <img src="" alt="" class="icon" />
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12 col-lg-4 cluster-cards">
+        <div class="card">
+          <h2>En Crimée, la résistance ukrainienne prend tous les risques</h2>
+          <div class="bottom-elements">
+            <p class="noun">De Thomas Wanhoff</p>
+            <img src="" alt="" class="icon" />
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-4 cluster-cards">
+        <div class="card">
+          <h2>En Crimée, la résistance ukrainienne prend tous les risques</h2>
+          <div class="bottom-elements">
+            <p class="noun">De Thomas Wanhoff</p>
+            <img src="" alt="" class="icon" />
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-4 cluster-cards">
+        <div class="card">
+          <h2>En Crimée, la résistance ukrainienne prend tous les risques</h2>
+          <div class="bottom-elements">
+            <p class="noun">De Thomas Wanhoff</p>
+            <img src="" alt="" class="icon" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
