correct and update code

--- a/src/index.html
+++ b/src/index.html
@@ -12,69 +12,98 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
-    <div class="container overflow-hidden">
+  <body class="bg-color">
+    <div class="container">
       <div class="row">
-        <div class="col-12 headline-cards">colonne 1</div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-6">
-          <div class="card-highlights">
-            <h2>En Crimée, la résistance ukrainienne prend tous les risques</h2>
+        <div class="col-12">
+          <div class="card-headline card">
+            <div class="category-international">
+              <p>International</p>
+            </div>
+            <h2>
+              Sanctions contre la Russie: l'UE adopte un 12e paquet +++ l'aide
+              américaine va expirer
+            </h2>
             <div class="bottom-elements">
               <p class="noun">De Thomas Wanhoff</p>
               <!-- <img src="" alt="" class="icon" /> -->
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="col-sm-12 col-md-6 col-lg-6">
-          <div class="card-highlights">
+      <div class="row">
+        <div class="col-sm-12 col-md-8 col-lg-6">
+          <div class="card-1">
+            <div class="bottom-elements">
+              <p class="category-international">International</p>
+              <h2 class="article-title">
+                Sanctions contre la Russie: l'UE adopte un 12e paquet +++ l'aide
+                américaine va expirer
+              </h2>
+              <p class="noun">De Thomas Wanhoff</p>
+            </div>
+            <img
+              src="img/hightlight-international-2.png"
+              alt="photo politiciens"
+              class="card-img"
+            />
+            <img src="img/save-icon-white.svg" alt="" class="icon" />
+          </div>
+          <!-- <p class="category-international">International</p>
+            <h2>
+              Sanctions contre la Russie: l'UE adopte un 12e paquet +++ l'aide
+              américaine va expirer
+            </h2> -->
+          <!-- <img
+                src="img/save-icon-white.svg"
+                alt="icône favorit"
+                class="icon"
+              /> -->
+          <!-- <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="card-highlight card">
+              <div class="category-international">
+                <p>International</p>
+              </div>
+              <h2>oguiogz</h2>
+              <div class="bottom-elements">
+                <p class="noun">De Thomas Wanhoff</p>
+                 <img src="" alt="" class="icon" />
+              </div>
+            </div>
+          </div> -->
+        </div>
+      </div>
+
+      <!-- <div class="row">
+        <div class="col-sm-12 col-lg-4">
+          <div class="card-cluster card">
             <h2>En Crimée, la résistance ukrainienne prend tous les risques</h2>
             <div class="bottom-elements">
               <p class="noun">De Thomas Wanhoff</p>
-              <!-- <img src="" alt="" class="icon" /> -->
+                <img src="" alt="" class="icon" /> 
             </div>
           </div>
         </div>
-
-        <div class="row">
-          <div class="col-sm-12 col-lg-4 cluster-cards">
-            <div class="card">
-              <h2>
-                En Crimée, la résistance ukrainienne prend tous les risques
-              </h2>
-              <div class="bottom-elements">
-                <p class="noun">De Thomas Wanhoff</p>
-                <!-- <img src="" alt="" class="icon" /> -->
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-12 col-lg-4 cluster-cards">
-            <div class="card">
-              <h2>
-                En Crimée, la résistance ukrainienne prend tous les risques
-              </h2>
-              <div class="bottom-elements">
-                <p class="noun">De Thomas Wanhoff</p>
-                <!-- <img src="" alt="" class="icon" /> -->
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-12 col-lg-4 cluster-cards">
-            <div class="card">
-              <h2>
-                En Crimée, la résistance ukrainienne prend tous les risques
-              </h2>
-              <div class="bottom-elements">
-                <p class="noun">De Thomas Wanhoff</p>
-                <!-- <img src="" alt="" class="icon" /> -->
-              </div>
+        <div class="col-sm-12 col-lg-4">
+          <div class="card card-cluster">
+            <h2>En Crimée, la résistance ukrainienne prend tous les risques</h2>
+            <div class="bottom-elements">
+              <p class="noun">De Thomas Wanhoff</p>
+              <img src="" alt="" class="icon" />
             </div>
           </div>
         </div>
-      </div>
+        <div class="col-sm-12 col-lg-4">
+          <div class="card-cluster card">
+            <h2>En Crimée, la résistance ukrainienne prend tous les risques</h2>
+            <div class="bottom-elements">
+              <p class="noun">De Thomas Wanhoff</p>
+              <img src="" alt="" class="icon" />
+            </div>
+          </div>
+        </div>
+      </div>  -->
     </div>
   </body>
 </html>
